@@ -209,6 +209,7 @@ key ctrl+k;deleteAndStoreLine
 key ctrl+alt+k;deleteToEOL
 key esc del;collapseWhitespace
 key esc [ 3 ; 3 ~    collapseWhitespace
+key alt+w            wrap_paragraph
 key enter;carriageReturn
 key tab;parsedIndent
 #key tab;indent
@@ -415,6 +416,7 @@ lang.text.indent.auto true
 lang.text.indent.roundup false
 #lang.text.indent.using_tabs true
 lang.text.tabsize 8
+lang.text.wrap_margin 80
 
 # Diakonos help files
 
@@ -435,6 +437,7 @@ lang.dhf.tokens.keys.format white bold
 lang.dhf.indent.size 2
 lang.dhf.indent.auto true
 lang.dhf.indent.roundup true
+lang.dhf.wrap_margin 80
 
 # XML
 
@@ -652,7 +655,7 @@ lang.ruby.indent.auto true
 lang.ruby.indent.roundup true
 #lang.ruby.indent.using_tabs true
 lang.ruby.tabsize 2
-lang.ruby.indent.indenters ^\s*(case|def|begin|ensure|when|else|ensure|for|while|elsif|if|class|module|rescue)\b|([{\[(]$|\{\s*\|[\w\s,]*\|\s*$)|\b(do)\b
+lang.ruby.indent.indenters ^\s*(case|def|begin|ensure|when|else|ensure|for|while|until|elsif|if|class|module|rescue)\b|([{\[(]$|\{\s*\|[\w\s,]*\|\s*$)|\b(do)\b
 lang.ruby.indent.unindenters ^\s*(end|else|elsif|ensure|when|rescue)\b|(^\s+[\]})])
 lang.ruby.indent.preventers (\".+?[^\\]\")|('.+?[^\\]')|(`.+?[^\\]`)|(\/.+?[^\\]\/)|(^\s*#.*)|\S\s+if
 lang.ruby.indent.ignore ^\s*$
