@@ -1,12 +1,12 @@
 # Welcome to Diakonos!
 
-Hello, and welcome to Diakonos!  My name is Pistos; I am the author of
-Diakonos, and I would like to thank you for trying the Diakonos text editor.
+Hello, and welcome to Diakonos! My name is Pistos; I am the author of Diakonos,
+and I would like to thank you for trying the Diakonos text editor.
 
 I have crafted Diakonos with ease of use in mind, so I hope you find it the
-most easy-to-use console text editor available for Linux.  If you have any
-suggestions, questions or comments, please share your thoughts in the
- #mathetes channel of the FreeNode IRC network
+most easy-to-use console text editor available for Linux. If you have any
+suggestions, questions or comments, please share your thoughts in the #mathetes
+channel of the FreeNode IRC network
 ( http://mibbit.com/?server=irc.freenode.net&channel=%23mathetes ).
 
 ## Getting Started
@@ -15,9 +15,9 @@ Press <F1> at any time to activate Diakonos' interactive help system.
 
 ## Removing the Welcome Message
 
-To stop this welcome message from appearing, edit the configuration file
-(by pressing <F12>), add the line "suppress_welcome true", and press
-<Ctrl-S> to save your change.
+To stop this welcome message from appearing, edit the configuration file (by
+pressing <F12>), add the line "suppress_welcome true", and press <Ctrl-S> to
+save your change.
 
 
 
