@@ -13,6 +13,7 @@ Diakonos Changelog
 - comment_string and comment_close_string settings added.
 - Numerous small fixes, adjustments and refactorings.
 - Added -m (--open-matching) command line argument.
+- wrap_paragraph function and wrap_margin setting added for hard wrapping text.
 
 0.8.5
 
